<resources>
    <string name="app_name">Qcraftiq</string>
    <string name="email_or_phone">email / Nomor Telepon</string>
    <string name="example_email">Contoh:achmad78@gmail.com</string>
    <string name="enter">Masuk</string>
    <string name="password">Password</string>
    <string name="enter_password">Masukkan Password</string>
    <string name="forgot_password">Lupa Kata Sandi</string>
    <string name="don_t_have_account_yet">Belum punya akun?</string>
    <string name="register_here">Daftar Disini</string>
    <string name="enter_without_login">Masuk Tanpa Login</string>
    <string name="title_home">Beranda</string>
    <string name="title_notification">Notifikasi</string>
    <string name="title_class">Kelas</string>
    <string name="title_course">Kursus</string>
    <string name="title_account">Akun</string>
    <string name="look_for_best_course">Cari kursus terbaik.....</string>
    <string name="category">Kategori</string>
    <string name="see_all">Lihat Semua</string>
    <string name="popular_course">Kursus Populer</string>
    <string name="image_content">image content</string>
    <string name="example_category_content">Mobile Development</string>
    <string name="example_category_content2">Pengembangan Aplikasi iOS</string>
    <string name="icon_start">icon start</string>
    <string name="example_value_rate">4.7</string>
    <string name="example_name_course">Belajar Dasar Pemograman Android Pemula</string>
    <string name="example_name_mentor">Achmad Muchlasin</string>
    <string name="icon_level_course">icon level course</string>
    <string name="example_level_course">Advance Level</string>
    <string name="icon_module">icon_module</string>
    <string name="example_module">19 Modul</string>
    <string name="icon_time">icon_time</string>
    <string name="example_time">60 Menit</string>
    <string name="example_text_button">Beli Rp 249.000</string>
    <string name="buy">Beli\t</string>
    <string name="notification">Notifikasi</string>
    <string name="icon_notification">Icon Notification</string>
    <string name="example_tagline_notification">Promosi</string>
    <string name="example_time_now">2 Maret, 12:00</string>
    <string name="example_title_notification">Dapatkan potongan 50% selama\n Bulan Ramadhan</string>
    <string name="example_description_notification">Syarat dan ketentuan berlaku!</string>
    <string name="example_progress_status">60% complete</string>
    <string name="my_class">Kelas Berjalan</string>
    <string name="icon_progress">icon_progress</string>
    <string name="warning_text_field_empty">Oops! Kolom ini tidak boleh kosong</string>
    <string name="warning_text_email_invalid">Oops! Alamat email Or Phone yang Anda masukkan tidak valid.</string>
    <string name="warning_text_phone_invalid">Oops! Number Phone yang Anda masukkan tidak valid.</string>
    <string name="warning_text_field_less_8">Oops! Kolom ini tidak boleh kurang dari 8 karakter</string>
    <string name="tentang_kelas">Tentang Kelas</string>
    <string name="warning_password_uppercase">Oops! Kata sandi harus mengandung setidaknya 1 huruf besar.</string>
    <string name="warning_password_special_character">Oops! Kata sandi harus mengandung setidaknya 1 karakter khusus (!,*,#,%,@).</string>
    <string name="input_otp">Masukkan OTP</string>
    <string name="the_6_digit_code_sent">Ketik 6 digit yang dikirimkan ke</string>
    <string name="example_destination_otp">achmad00@gmai.com</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="resending">Kirim ulang OTP dalam 56 detik</string>
    <string name="request_new_code">Minta Kode baru via Email</string>
    <string name="kelas_lainnya">Kelas Lainnya</string>
    <string name="uiux_design">UI/UX Design</string>
    <string name="rating">5.0</string>
    <string name="course_title">Intro to Basic of User Interaction Design</string>
    <string name="creator">Budi Doe</string>
    <string name="level1">Beginner Level</string>
    <string name="level2">Intermediate Level</string>
    <string name="level3">Master Level</string>
    <string name="modul_uiux">5 Modul</string>
    <string name="durasi_course">60 Menit</string>
    <string name="layout_buttontab">Tentang/Materi Kelas</string>
    <string name="gabung_telegram">Join Group Telegram!</string>
    <string name="deskripsi_course">    Design system adalah kumpulan komponen design, code, ataupun dokumentasi yang dapat digunakan sebagai panduan utama yang memunginkan designer serta developer memiliki lebih banyak kontrol atas berbagai platform. Dengan hadirnya design system, dapat menjaga konsistensi tampilan user interface dan meningkatkan user experience menjadi lebih baik. Disisi bisnis, design system sangat berguna dalam menghemat waktu dan biaya ketika mengembangkan suatu produk.
    Bersama mentor XXX, kita akan mempelajari design system dari mulai manfaat, alur kerja pembuatannya, tools yang digunakan, hingga pada akhirnya, kita akan membuat MVP dari design system. Selain itu, mentor juga akan menjelaskan berbagai resource yang dibutuhkan untuk mencari inspirasi mengenai design system.
    Kelas ini sesuai untuk Anda yang ingin memahami apa itu design system. Tidak hanya ditujukan untuk UI/UX Designer ataupun Developer, kelas ini sangat sesuai untuk stakeholder lain agar dapat memudahkan tim dalam bekerja sama. Yuk segera daftar dan kami tunggu di kelas ya!</string>
    <string name="kelas_ditujukan">Kelas ini Ditujukan Untuk:</string>
    <string name="deskripsi_course2">
        1. Anda yang ingin memahami poin penting design system
        2. Anda yang ingin membantu perusahaan lebih optimal dalam membuat design produk
        3. Anda yang ingin latihan membangun design system
        4. Anda yang ingin latihan membangun design system</string>
    <string name="study_materials">Materi Belajar</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="logo_app">Logo</string>
    <string name="study">Belajar</string>
    <string name="tittle_splash_one">dari Pengalaman Terbaik!</string>
    <string name="title_splash_two">dari Praktisi Terbaik!</string>
    <string name="title_splash_three">darimana Saja!</string>
    <string name="btn_splash">btn splash</string>
    <string name="description">description</string>
    <string name="image_slide">image slide</string>
    <string name="image_view_button_back">image view button back</string>
    <string name="course_image_view">Course image view</string>
    <string name="ui_ux_design">UI/UX Design</string>
    <string name="intro_basic_ui">Intro to Basic of User Interaction Design</string>
    <string name="simon_doe_author">Simon Doe</string>
    <string name="price">Harga</string>
    <string name="rupiah">Rp.</string>
    <string name="_349_000">Rp. 349.000</string>
    <string name="_38_390">38.390</string>
    <string name="ppn_11">PPN 11%</string>
    <string name="total">Total</string>
    <string name="_387_390">Rp. 387.390</string>
    <string name="text_button_payment">Bayar dan Ikuti Kelas Selamanya</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="credit_card">Credit Card</string>
    <string name="card_number">Card Number</string>
    <string name="_3550_0000_0000_0000">3550 0000 0000 0000</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="jeff_bezos">Jeff Bezos</string>
    <string name="ccv">CCV</string>
    <string name="button_back">Button Back</string>
    <string name="register">Daftar</string>
    <string name="name">Nama</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="example_phone">+62</string>
    <string name="create_password">Buat Password</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="login_here">Masuk disini</string>
    <string name="account">Akun</string>
    <string name="save_my_profile">Simpan Profile Saya</string>
    <string name="input_city_of_residence">Masukan Kota tempat tinggal</string>
    <string name="city">Kota</string>
    <string name="input_country_of_residence">Masukan Negara tempat tinggal</string>
    <string name="country">Negara</string>
    <string name="example_email_2">youremail@gmail.com</string>
    <string name="example_name">Nama Anda</string>
    <string name="pilih_salah_satu">Pilih Salah Satu</string>
    <string name="galeri">Galeri</string>
    <string name="camera">Camera</string>
</resources>