<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/notification"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/navigation_class"
        android:icon="@drawable/my_class"
        android:title="@string/title_class" />

    <item
        android:id="@+id/navigation_course"
        android:icon="@drawable/list_course"
        android:title="@string/title_course" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account"
        android:title="@string/title_account" />
</menu>