<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewButtonBack"
        android:layout_marginTop="14dp"
        android:layout_marginStart="28dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/arrow_left"
        android:contentDescription="@string/button_back" />

    <ImageView
        android:id="@+id/imageViewPhotoProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewButtonBack"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/account_circle"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/account" />

    <TextView
        android:id="@+id/textViewName"
        style="@style/TextContent.Body.PopMedium"
        android:layout_marginTop="15dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewPhotoProfile" />

    <EditText
        android:id="@+id/edtName"
        style="@style/EditTextContent2"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="5dp"
        android:text="@string/example_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewName"
        android:autofillHints="name" />

    <TextView
        android:id="@+id/textViewEmail"
        style="@style/TextContent.Body.PopMedium"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/EditTextContent2"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="5dp"
        android:autofillHints="emailAddress"
        android:text="@string/example_email_2"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail" />

    <TextView
        android:id="@+id/textViewPhone"
        style="@style/TextContent.Body.PopMedium"
        android:layout_marginTop="10dp"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <EditText
        android:id="@+id/edtPhone"
        style="@style/EditTextContent2"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="5dp"
        android:autofillHints="phone"
        android:text="@string/example_phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPhone" />

    <TextView
        android:id="@+id/textViewCountry"
        style="@style/TextContent.Body.PopMedium"
        android:layout_marginTop="10dp"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPhone" />

    <EditText
        android:id="@+id/edtCountry"
        style="@style/EditTextContent2"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="5dp"
        android:hint="@string/input_country_of_residence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCountry"
        android:autofillHints="country"
        android:inputType="text" />

    <TextView
        android:id="@+id/textViewCity"
        style="@style/TextContent.Body.PopMedium"
        android:layout_marginTop="10dp"
        android:text="@string/city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtCountry" />

    <EditText
        android:id="@+id/edtCity"
        style="@style/EditTextContent2"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="5dp"
        android:hint="@string/input_city_of_residence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCity"
        android:autofillHints="city"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonSaveMyProfile"
        style="@style/ButtonContent"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/pop_medium"
        android:text="@string/save_my_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtCity" />


</androidx.constraintlayout.widget.ConstraintLayout>