<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.bottom_sheet.ChooseCameraOrGalleryBottomSheet">

    <TextView
        style="@style/TextContent.Headline"
        android:text="@string/pilih_salah_satu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:id="@+id/textViewSelect"/>

    <Button
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:text="@string/galeri"
        app:layout_constraintTop_toBottomOf="@id/textViewSelect"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:id="@+id/buttonGallery"/>

    <Button
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:text="@string/camera"
        app:layout_constraintTop_toBottomOf="@id/textViewSelect"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:id="@+id/buttonCamera"/>
</androidx.constraintlayout.widget.ConstraintLayout>